refactor: wire logger gateway and improve observability in API layer